Revert "Fix layout issues to improve accessibility and orientation handling"
This reverts commit ab67c18ad5bf776a12502dc02d375db0c1d05b9c.

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,16 +12,6 @@ body {
     font-family: "Manrope", sans-serif;
     background-color: hsl(218, 23%, 16%);
     color: white;
-    margin-block: 1rem; 
-}
-
-main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-grow: 1;
-    width: 100%;
-    margin: auto;
 }
 
 .container {
@@ -31,10 +21,9 @@ main {
     border-radius: 15px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
     position: relative;
-    overflow: hidden;
+    overflow: visible;
     margin: 0 auto;
     max-width: 90%;
-    max-height: calc(100vh - 4rem);
 }
 
 .advice-card {
@@ -98,6 +87,14 @@ main {
 img, picture {
     display: block;
     max-width: 100%;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    width: 100%;
 }
 
 footer {
